--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -377,6 +377,8 @@
 
     "Species.bolian.name": "Болианец",
 
+    "Species.borg.name": "Борг",
+
     "Species.bynar.name": "Бинар",
 
     "Species.caitian.name": "Каитан",
@@ -429,10 +431,13 @@
     "Species.trill.description": "Триллы - вид с одноимённой планеты, кажутся почти идентичными людям, за исключением пятен по бокам их тел с головы до ног. Однако это поверхностное сходство скрывает существенное различие: триллы способны соединяться с симбиотическим организмом, известным как «симбионт», создавая одно существо из двух ранее самостоятельных. Симбионты могут\nжить на протяжении многих веков, их передают от трилла к триллу, с каждым разом перенося воспоминания и знания предыдущих носителей в новый союз. Этот факт не слишком хорошо известен за пределами общества триллов, но это не секрет - он просто не обсуждается широко, а количество соединённых триллов сравнительно невелико. Триллы входят в состав Федерации уже более ста лет, и несколько известных триллов сыграли важную роль в её формировании. Цивилизация триллов построена в первую очередь на интеллектуальной деятельности, так как симбионты ценят в носителях обучаемость и мудрость.",
     "Species.trill.traitDescription": "Благодаря способности к соединению триллы особенно устойчивы к паразитам, а соединённые триллы получают полный иммунитет к паразитарному заражению. Тем не менее они, особенно соединённые, как правило, обладают сильной аллергической реакцией на укусы насекомых и другие виды яда, способные повлиять на их нервную систему. Поскольку многие физиологические особенности триллов (особенно касающиеся симбиоза) малоизвестны, это может привести к медицинским осложнениям.",
 
+    "Species.vorta.name": "Ворта",
+
     "Species.vulcan.name": "Вулканец",
     "Species.vulcan.description": "Вулканцы - стоический и рациональный вид. Хотя их повсеместно считают бесчувственными, на самом деле вулканцы испытывают глубокие и сильные переживания в ущерб себе. Их стоицизм развился благодаря культуре логики и самодисциплины, при которой эмоции анализируются и препарируются, чтобы лишить их возможности подавлять и контролировать индивида. Вулканцы предпочитают науку и разум, но не ограничиваются ими - они склонны к глубокой философии, а искусство и музыка так же важны для вулканской культуры, как и логика. Кроме того, вулканцы тщательно оберегают личные границы, и многие аспекты их культуры (например, обряд «пон-фарр») не обсуждаются с посторонними.",
     "Species.vulcan.traitDescription": "Благодаря суровой и засушливой родной планете с высокой гравитацией вулканцы от природы устойчивы к экстремальным температурам и обезвоживанию, чрезвычайно сильны и обладают\nразвитыми слухом и обонянием. Они также способны к телепатии, хотя для её развития до должного уровня требуются тренировки, они с детства учатся умственной дисциплине и эмоциональному контролю. Однако для поддержания этого состояния необходимы регулярные медитации, а склонность вулканцев к контролю и уединению может отдалить их от других и сделать взаимодействие с ними неудобным.",
 
+    "Talent.boldCommand": "Смелый: Коммандование (Общее)",
     "Talent.culturalFlexibility": "КУЛЬТУРНАЯ ГИБКОСТЬ",
 
     "Talent.culturalFlexibility.description": "Ваш вид дружелюбен, терпелив и любознателен, и вы - пример этих качеств. Вы легко приспосабливаетесь к незнакомым социальным структурам и новым культурам. Снизьте на 1 сложность Задач по знакомству с неизвестной культурой или при попытке придерживаться верного поведения, взаимодействуя с представителем такой культуры.",
@@ -456,6 +461,10 @@
     "Talent.kolinahr": "КОЛИНАР",
 
     "Talent.kolinahr.description": "Вы прошли ритуальное путешествие, чтобы очиститься от эмоций. Сложность выполнения вами любых Задач, связанных с противодействием принуждению, проникновению в разум, боли и прочим ментальным воздействиям, снижается на 2.",
+
+    "Talent.meanRightHook": "Мощный Хук Справа",
+
+    "Talent.meanRightHook.description": "Урон от ваших Атак без оружия оказывает 1 Повреждающее воздействие.",
 
     "Talent.mindMeld": "СЛИЯНИЕ РАЗУМОВ",
 
