additional translation support; minor token changes

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -1029,7 +1029,7 @@
 
     "Upbringing.starfleet.artisticAndCreative.name": "Kunst und Kreativität",
 
-    "Upbringing.starfleet.diplomacy and Politics.name": "Diplomatie und Politik",
+    "Upbringing.starfleet.diplomacyAndPolitics.name": "Diplomatie und Politik",
 
     "Value.environment.text": "Diese Überzeugung sollte die Herkunft und die Kultur des Charakters, in der er oder sie aufgewachsen ist, widerspiegeln. Dies ist eine gute Gelegenheit, sich darüber Gedanken zu machen, wie der Charakter seine oder ihre eigene Kultur sieht und wie er oder sie zu den Philosophien und Traditionen der Vorfahren steht.",
 
